server.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyserver
spec:
  # type: NodePort # LoadBalancer
  # externalTrafficPolicy: Cluster
  # ipFamilyPolicy: SingleStack
  # ipFamilies:
  # - IPv4
  selector:
    app: pyserver
  ports:
  - protocol: TCP
    # nodePort: 30001
    port: 8001
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyserver
  labels:
    app: pyserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyserver
  template:
    metadata:
      labels:
        app: pyserver
    spec:
      containers:
      - name: pyserver
        image: juroberttyb/app:2.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name:  configmaptest
          mountPath: /mnt/config
        - name:  secretest
          mountPath: /mnt/secret
          readOnly: true
      volumes:
        - name: configmaptest
          configMap: 
            name: game-demo
        - name: secretest
          secret: 
            secretName: mysecret
