ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: pyserver
            port:
              number: 8001
      - path: /n/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 80
